Fix footer overlap issue - change position from absolute to relative

--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -1069,7 +1069,7 @@ body.page-template-page-form .site-content {
   height: var(--s-footer-height);
 }
 .site-footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   right: 0;
